@@ -1,5 +1,8 @@
 0.5.4 - "catnap"
 
+* Channel keys defined in miaurc now have effect. Thanks to Ralf van der
+  Enden.
+
 * Workaround for Chatzilla. Thanks to Oliver Eikemeier and James Ross.
 
 
